--- a/index.html
+++ b/index.html
@@ -14,9 +14,15 @@
     </header>
     <main>
         <nav>
-            <center><button id="btnCadastro"><img src="./assets/image/cadastro.png" alt=""></button>
-            <button id="btnConsulta"><img src="./assets/image/consulta.png" alt=""></button></center>
-        </nav>
+            <center>
+                <button id="btnCadastro">
+                    <img src="./assets/image/cadastro.png" alt="cadastro">
+                </button>
+                <button id="btnConsulta">
+                    <img src="./assets/image/consulta.png" alt="consulta">
+                </button>
+            </center>
+        </nav>        
         <section id="cadastro" class="active">
             <h2>CADASTRO:</h2>
             <form id="formCadastro">
